newclay/test/Compiler/Propagation/Fail/RecursiveGlobal1/main.clay
var x = y;
var y = x;

main() = x;
